tests/invalid/unop_type_mismatch.ar
// errc: 5
fn main() {
    {
        let a: u8;
        let b = --a; // this is deliberate
    }

    {
        let a: u16;
        let b = -a;
    }

    {
        let a: u32;
        let b = -a;
    }

    {
        let a: u64;
        let b = -a;
    }

    {
        let a: usize;
        let b = -a;
    }
}
